# inf573vegetalisation

./: .gitignore  README.md  pyproject.toml  story.ipynb  train_cnn.ipynb
CNN/: utils_cnn.py
compter/: data.py  display.py  ndvi.ipynb  processing.py  test.ipynb  tests.ipynb
count/: data.py  processing.py
doc/: articles.md
flair/: README.md  flair-1-baseline.ipynb  flair-1-config.yml  main.py  requirements.txt
flair/TEST/flair-one-toy-baseline/predictions_flair-one-toy-baseline/: PRED_061946.tif  PRED_062207.tif  PRED_062393.tif  PRED_062524.tif  PRED_062871.tif  PRED_063104.tif  PRED_063120.tif  PRED_063366.tif  PRED_063620.tif  PRED_063812.tif  PRED_064026.tif  PRED_064027.tif  PRED_064234.tif  PRED_064890.tif  PRED_065011.tif  PRED_065120.tif  PRED_065229.tif  PRED_065275.tif  PRED_066278.tif  PRED_066772.tif  PRED_067094.tif  PRED_067163.tif  PRED_067195.tif  PRED_067998.tif  PRED_069067.tif  PRED_069248.tif  PRED_069274.tif  PRED_070457.tif  PRED_070770.tif  PRED_071026.tif  PRED_071100.tif  PRED_071586.tif  PRED_071824.tif  PRED_071940.tif  PRED_072628.tif  PRED_072737.tif  PRED_073700.tif  PRED_073879.tif  PRED_074054.tif  PRED_074756.tif  (+10 more)
flair/lightning_logs/version_0/: events.out.tfevents.1701013558.OrdinateBrandon.lan.44530.2  events.out.tfevents.1701019759.OrdinateBrandon.lan.47989.2
flair/lightning_logs/version_1/: events.out.tfevents.1701015929.OrdinateBrandon.lan.45465.2  events.out.tfevents.1702225320.OrdinateBrandon.3260.2
(+9 files in other folders)
