[tool.poetry]
name = "INF573"
version = "0.1.0"
description = ""
authors = ["TheoGimli <theo@gimli-med.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
opencv-python = "^4.8.0"
scikit-image = "^0.21.0"
matplotlib = "^3.8.0"
ipywidgets = "^8.1.1"
torchvision = "^0.16.0"
rasterio = "^1.3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
